# cycsound

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  csnd.pyx  csound.pxd  cycsound.pyx  pyproject.toml  setup.py  test_csnd.py
.github/workflows/: wheels.yml
docs/: comparison.md  scratch.py
scripts/: gen.py  load_csnd.py  parse.py
src/cycsound/: __init__.py  __main__.py  _core.pyx  csound.pxd
tests/: README.md  init.py  test.aif  test_channel_control.py  test_channel_update.py  test_channels.py  test_cli.py  test_compile_file.py  test_compile_file2.py  test_compile_text.py  test_cycsound.py  test_generate.py  test_init.py  test_loop.py  test_midi.py  test_recompile.py  test_thread.py
