[project]
name = "cycsound"
version = "0.1.0"
description = "Cython bindings for the Csound audio synthesis library"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
keywords = [
    "audio",
    "csound",
    "cython",
    "music",
    "synthesis",
    "dsp",
    "sound",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/shakfu/cycsound"
Repository = "https://github.com/shakfu/cycsound"
Issues = "https://github.com/shakfu/cycsound/issues"
Changelog = "https://github.com/shakfu/cycsound/blob/main/CHANGELOG.md"

[tool.scikit-build]
wheel.packages = ["src/cycsound"]
wheel.exclude = [
    "*.pxd",
    "*.pyx",
    "*.c",
    "*.h",
]
cmake.build-type = "Release"
sdist.exclude = [
    "build",
    "dist",
    ".venv",
    "*.egg-info",
]

# For static builds, use: pip install . --config-settings=cmake.define.STATIC=ON

[dependency-groups]
dev = [
    "pytest>=8.0",
    "twine>=6.2.0",
]

[project.scripts]
cycsound = "cycsound.__main__:main"

[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*  cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
test-command = "python -c \"import cycsound; print(cycsound.get_version())\""

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y epel-release || true",
    "yum install -y csound csound-devel || (apt-get update && apt-get install -y csound libcsound64-dev)",
]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[tool.cibuildwheel.windows]
before-all = "choco install csound -y"
